--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -8,7 +8,9 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-
+  schedule:
+    # * is a special character in YAML so you have to quote this string
+    - cron:  '20 10 * * *'
 jobs:
   build:
 
